// The resources for a layout.
syntax = "proto3";

package androidx.wear.protolayout.proto;

import "dynamic.proto";
import "trigger.proto";

option java_package = "androidx.wear.protolayout.proto";
option java_outer_classname = "ResourceProto";

// Format describing the contents of an image data byte array.
enum ImageFormat {
  // An undefined image format.
  IMAGE_FORMAT_UNDEFINED = 0;

  // An image format where each pixel is stored on 2 bytes, with red using 5
  // bits, green using 6 bits and blue using 5 bits of precision.
  IMAGE_FORMAT_RGB_565 = 1;
}

// An image resource which maps to an Android drawable by resource ID.
message AndroidImageResourceByResId {
  // The Android resource ID of this image. This must refer to a drawable under
  // R.drawable.
  int32 resource_id = 1;
}

// An image resource whose data is fully inlined, with no dependency on a
// system or app resource.
message InlineImageResource {
  // The byte array representing the image.
  bytes data = 1;

  // The native width of the image, in pixels. Only required for formats
  // (e.g. IMAGE_FORMAT_RGB_565) where the image data does not include size.
  int32 width_px = 2;

  // The native height of the image, in pixels. Only required for formats
  // (e.g. IMAGE_FORMAT_RGB_565) where the image data does not include size.
  int32 height_px = 3;

  // The format of the byte array data representing the image. May be left
  // unspecified or set to IMAGE_FORMAT_UNDEFINED in which case the platform
  // will attempt to extract this from the raw image data. If the platform does
  // not support the format, the image will not be decoded or displayed.
  ImageFormat format = 4;
}

// An image to be loaded from a ContentProvider, by content URI.
message AndroidImageResourceByContentUri {
  // The content URI to use, on the format content://authority/resource.
  string content_uri = 1;
}

// Format describing the contents of an animated image.
enum AnimatedImageFormat {
  // An undefined image format.
  ANIMATED_IMAGE_FORMAT_UNDEFINED = 0;

  // Android AnimatedVectorDrawable.
  ANIMATED_IMAGE_FORMAT_AVD = 1;
}

// A non-seekable animated image resource that maps to an Android drawable by
// resource ID. The animation is started with given trigger, fire and forget.
message AndroidAnimatedImageResourceByResId {
  // The format for the animated image.
  AnimatedImageFormat format = 1;

  // The Android resource ID, e.g. R.drawable.foo.
  int32 resource_id = 2;

  // The trigger to start the animation.
  Trigger trigger = 3;
}

// A seekable animated image resource that maps to an Android drawable by
// resource ID. The animation progress is bound to the provided dynamic float.
message AndroidSeekableAnimatedImageResourceByResId {
  // The format for the animated image.
  AnimatedImageFormat format = 1;

  // The Android resource ID, e.g. R.drawable.foo
  int32 resource_id = 2;

  // A dynamic float, normally transformed from certain states with the data
  // binding pipeline, controls the progress of the animation. Its value is
  // required to fall in the range of [0.0, 1.0], any values outside this range
  // would be clamped.
  //
  // Typically, AnimatableFixedFloat or AnimatableDynamicFloat is used for this
  // progress. With AnimatableFixedFloat, the animation is played from progress
  // of its from_value to to_value; with AnimatableDynamicFloat, the animation
  // is set from progress 0 to its first value once it is available, it then
  // plays from current progress to the new value on subsequent updates.
  androidx.wear.protolayout.expression.proto.DynamicFloat progress = 3;
}

// An image resource, which can be used by layouts. This holds multiple
// underlying resource types, which the underlying runtime will pick according
// to what it thinks is appropriate.
message ImageResource {
  // An image resource that maps to an Android drawable by resource ID.
  AndroidImageResourceByResId android_resource_by_res_id = 1;

  // An image resource that contains the image data inline.
  InlineImageResource inline_resource = 2;

  // An image which loads its drawable via an Android Content URI.
  AndroidImageResourceByContentUri android_content_uri = 5;

  // A non-seekable animated image resource that maps to an Android drawable by
  // resource ID. The animation is started with given trigger, fire and forget.
  AndroidAnimatedImageResourceByResId android_animated_resource_by_res_id = 6;

  // A seekable animated image resource that maps to an Android drawable by
  // resource ID. The animation progress is bound to the provided dynamic float.
  AndroidSeekableAnimatedImageResourceByResId
      android_seekable_animated_resource_by_res_id = 7;
}

// The resources for a layout.
message Resources {
  // The version of this Resources instance.
  //
  // Each layout specifies the version of resources it requires. After fetching
  // a layout, the renderer will use the resources version specified by the
  // layout to separately fetch the resources.
  //
  // This value must match the version of the resources required by the layout
  // for the layout to render successfully, and must match the resource version
  // specified in ResourcesRequest which triggered this request.
  string version = 1;

  // A map of resource_ids to images, which can be used by layouts.
  map<string, ImageResource> id_to_image = 2;
}
